--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -1,7 +1,7 @@
 name: Windows Build
 
 on:
-  # Allows you to run this workflow manually from the Actions tab of the repository
+  # 手动触发 打包
   workflow_dispatch:
 
 env:
@@ -13,7 +13,7 @@ env:
   PYTHON_VERSION: 3.12.8
 
   # flet-cli version to install for `flet build`
-  FLET_CLI_VERSION: 0.27.5
+  FLET_CLI_VERSION: 0.28.2
 
   # Ensures Python uses UTF-8 encoding by default
   PYTHONUTF8: 1
@@ -51,5 +51,6 @@ jobs:
       with:
         name: windows-build-artifact
         path: build/windows
+        spec:''
         if-no-files-found: error
         overwrite: false
