--- a/.github/workflows/window_myapp.yml
+++ b/.github/workflows/window_myapp.yml
@@ -57,3 +57,11 @@ jobs:
       run: |
         flet build windows --verbose --no-rich-output --build-number=$env:BUILD_NUMBER --build-version=$env:BUILD_VERSION
 
+  - name: Upload Windows Artifact
+      uses: actions/upload-artifact@v4.3.4
+      with:
+        name: windows-build-artifact
+        path: build/windows
+        if-no-files-found: error
+        overwrite: false
+
